[gd_scene load_steps=7 format=3 uid="uid://cw5j8lm8lxqx"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_0s5ml"]
[ext_resource type="Texture2D" uid="uid://0v67jg2ms8f5" path="res://assets/menu/99ae6bdc-98cb-4858-9734-c359f60c3acf-0.png" id="1_bgsnj"]
[ext_resource type="Texture2D" uid="uid://bo2qxkrv5xdcs" path="res://assets/ShineOnSprites/BackgroundImages/ForestBG2.png" id="2_j6knc"]
[ext_resource type="Texture2D" uid="uid://cw0y7vn8axkfj" path="res://assets/menu/button UI.png" id="4_kvh8v"]
[ext_resource type="FontFile" uid="uid://qn8fxknm8ukl" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_47yr8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3y5xq"]
atlas = ExtResource("4_kvh8v")
region = Rect2(16, 0, 16, 16)

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_0s5ml")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -653.0
offset_top = -15.0
offset_right = 1271.0
offset_bottom = 947.0
texture = ExtResource("2_j6knc")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -333.0
offset_right = 244.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bgsnj")
expand_mode = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -212.0
offset_right = 105.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_47yr8")
theme_override_font_sizes/font_size = 24
text = "PLAY"
alignment = 0

[node name="TextureRect2" type="TextureRect" parent="Button"]
texture_filter = 1
offset_left = 120.0
offset_top = -10.0
offset_right = 170.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_3y5xq")

[node name="RichTextLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 569.0
offset_right = 182.0
offset_bottom = 609.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_47yr8")
theme_override_font_sizes/font_size = 32
text = "tree hoppers"

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -19.0
offset_right = 152.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "enter your name"

[node name="Button2" type="Button" parent="."]
offset_left = 208.0
offset_top = 497.0
offset_right = 420.0
offset_bottom = 529.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_47yr8")
theme_override_font_sizes/font_size = 24
text = "SUBMIT"
alignment = 0

[node name="TextureRect3" type="TextureRect" parent="Button2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.0
offset_top = -25.0
offset_right = 112.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_3y5xq")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
